discussion/kv_engine/164522/164522_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49030: Return Magma::Snapshot in a DomainAwareUniquePtr

Both GetDiskSnapshot and GetSnapshot return the Snapshot via
a unique_ptr reference - so created inside magma (secondary)
and freed by the caller (primary). This will lead to the
domain memory stats under flowing.

Change-Id: I43b8ff0a6004402f950cc3be9f931a57a4c18d95

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-29 13:46:57.000000000
Message: 
Patch Set 2: Patch Set 1 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-29 14:31:31.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35226/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:112:5:
error: use of undeclared identifier "Expects"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35226/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41477/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0084/0159]: vbucket set (replica)...(138 ms) OK


99% tests passed, 1 tests failed out of 415

Total Test time (real) = 1258.00 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41477/ )

Timeout of a CTest test 415/415 Test #269: ep_testsuite.ephemeral.comp_active ............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41477/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13743/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:112:5: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
    Expects(!snap);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:116:21: error: use of undeclared identifier "Magma"; did you mean "magma"? [clang-diagnostic-error]
    std::unique_ptr<Magma::Snapshot> snapshot;
                    ^~~~~
                    magma
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:40:11: note: "magma" declared here
namespace magma {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:116:28: error: no member named "Snapshot" in namespace "magma" [clang-diagnostic-error]
    std::unique_ptr<Magma::Snapshot> snapshot;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:116:38: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    std::unique_ptr<Magma::Snapshot> snapshot;
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:125:5: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
    Expects(!snap);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:127:21: error: use of undeclared identifier "Magma"; did you mean "magma"? [clang-diagnostic-error]
    std::unique_ptr<Magma::Snapshot> snapshot;
                    ^~~~~
                    magma
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:40:11: note: "magma" declared here
namespace magma {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:127:28: error: no member named "Snapshot" in namespace "magma" [clang-diagnostic-error]
    std::unique_ptr<Magma::Snapshot> snapshot;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:127:38: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    std::unique_ptr<Magma::Snapshot> snapshot;
                                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13743/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:112:5:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13743/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12544/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23695/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16321/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15640/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3377/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14521/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15356/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3449/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
